<resources>
    <string name="app_name">MapMate</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="welcome_to_mapmate">Welcome to MapMate</string>
    <string name="get_started">Get Started</string>
    <string name="hi_nplease_login">Hi,\nPlease Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="or_login_with">Or Login With</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="repassword">RePassword</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="campus_events">Campus Events</string>
    <string name="building_updates">Building Updates</string>
    <string name="emergency_alerts">Emergency Alerts</string>
    <string name="app_version_1_0_0">App Version: 1.0.0</string>
    <string name="general_settings">General Settings</string>
    <string name="clear_app_cache">Clear App Cache</string>
    <string name="data_usage">Data Usage</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="support">Support</string>
    <string name="frequently_asked_questions_faq">Frequently Asked Questions (FAQ)</string>
    <string name="contact_support">Contact Support</string>
    <string name="guest_lecture_on_ai">Guest Lecture on AI</string>
    <string name="new_research_hub">New Research Hub</string>
    <string name="university_updates">University Updates</string>
    <string name="ready_to_navigate">Ready to navigate</string>
    <string name="guest_lecture">Guest Lecture</string>
    <string name="attend_a_guest_lecture_on_innovative_technologies_by_a_leading_expert_in_fieald">Attend a guest lecture on innovative technologies by a leading expert in the field</string>
    <string name="art_exhibition">Art Exhibition</string>
    <string name="visit_the_universitys_art_exhibition_showcasing_work_from_talented_students">Visit the university art exhibition showcasing work from talented students</string>
    <string name="join_us_for_an_insightful_lecture_on_the_future_of_ai_and_machine_learning">Join us for an insightful lecture on the future of AI and machine learning</string>
    <string name="the_university_opens_a_state_of_the_art_research_facility_to_suppport_innovation">The university opens a state-of-the-art research facility to support innovation</string>
    <string name="map_view_for_navigating_and_displaying_locations">Map View for navigating and displaying locations</string>
    <string name="update_image_desc4">Update image description 4</string>
    <string name="update_image_desc3">Update image description 3</string>
    <string name="update_image_desc2">Update image description 2</string>
    <string name="update_image_desc1">Update image description 1</string>
    <string name="or_sign_in_with">OR Sign In with</string>
    <string name="signin">Sign In</string>
    <string name="map1">Map</string>
    <string name="where_am_i">Where am I?</string>
    <string name="profile_page">Profile Page</string>
    <string name="edit_address">Edit address</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="edit_bio">Edit bio</string>
    <string name="sign_out1">Sign Out</string>
    <string name="save">Save</string>
    <string name="default_web_client_id">193056854477-8qhr1tvg724drit07sk05l0dqkuskuib.apps.googleusercontent.com</string>
    <string name="no_internet">No internet connection</string>
    <string name="loading">Loading…</string>
    <string name="error_generic">Something went wrong. Please try again.</string>
</resources>
